--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -16,7 +16,7 @@
     android:textStyle="bold"
     android:textSize="40dp"
         android:fontFamily="@font/correo_contrasena"
-        android:textColor="#0000FF"
+        android:textColor="#00FFC4"
     android:layout_marginTop="103dp"
     android:layout_marginRight="15dp"
     android:layout_marginLeft="25dp"/>
@@ -26,11 +26,11 @@
         android:layout_height="wrap_content"
         android:text="Puedes iniciar sesion con Email"
         android:textStyle="bold"
-        android:layout_gravity="center_vertical"
-        android:textSize="31dp"
+        android:layout_gravity="center"
+        android:textSize="22dp"
         android:fontFamily="@font/correo_contrasena"
-        android:textColor="#ffff"
-        android:layout_marginTop="463dp"
+        android:textColor="#4BE6E6"
+        android:layout_marginTop="533dp"
         android:layout_marginRight="15dp"
         android:layout_marginLeft="25dp"/>
 
