--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
 
 
     <color name="btn_color">#40E0D0</color>
-    <color name="color_morado">#FF6200EE</color>
+    <color name="color_morado">#9932CC</color>
     <color name="color_morado_accent">#512DA8</color>
     <color name="color_morado_light">#E0D9ED</color>
     <color name="color_gray">#CDEFED</color>
